[BUG] iOS safari, iphone: footer #charity icon wraps down

--- a/css/layout.css
+++ b/css/layout.css
@@ -258,6 +258,7 @@ section blockquote {
   background: rgb(204, 199, 199);
   height: 100px;
   line-height: 100px;
+  padding: 0 10px;
 }
 
 /*AND/OR styling*/
